package edu.fiuba.algo3.modelo.AccionNocturna;

public class ANula {
}
