package edu.fiuba.algo3.modelo;

public class Ciudadano extends CartaRol {
    @Override
    public boolean esMafia() {
        return false;
    }
}
