package edu.fiuba.algo3.modelo.Desempate;

public class Ballotage implements MecanismoDesempate {
}
