package edu.fiuba.algo3.modelo.Fases;

import edu.fiuba.algo3.modelo.Jugador;

import java.util.List;

public class Diurna extends Fase {
    @Override
    public void ejecutar(List<Jugador> jugadores) {

    }
}
