package edu.fiuba.algo3.modelo.Roles;

import edu.fiuba.algo3.modelo.Investigar;

public class Detective extends Ciudadano {
    private Investigar habilidad;
}
