package edu.fiuba.algo3.modelo.Roles;

import edu.fiuba.algo3.modelo.Proteger;

public class Medico extends Ciudadano {
    private Proteger habilidad;
}
