package edu.fiuba.algo3.modelo.Roles;

import edu.fiuba.algo3.modelo.Nula;

public class Sheriff extends Ciudadano {
    private Nula habilidad;

}
