package edu.fiuba.algo3.modelo;

import java.util.List;

public class Turno {
    private Nocturna nocturna;
    private Diurna diurna;
    private Fase faseActual;

    public void ejecutarFaseActual(List<Jugador> jugadores) {}
    public void avanzarFase(List<Jugador> jugadores) {}
    public boolean estaTerminado() {return false;}
}
